# FluidSim

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/adriansimmons/fluidsim/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fluid.cpp  fluid.h  linalg.cpp  linalg.h  logger.h  native-lib.cpp
app/src/main/java/com/adriansimmons/fluidsim/: FluidSimNativeLib.java  FluidSimView.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/adriansimmons/fluidsim/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
